--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -4,7 +4,6 @@
 <head>
 	<meta name="viewport" content="width=device-width" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>New form submission</title>
 	<style type="text/css">
 		{% include 'emails/style.css' %}
 	</style>
@@ -21,7 +20,7 @@
 					<table class="main" width="100%" cellpadding="0" cellspacing="0">
 						<tr>
 							<td class="alert alert-neutral">
-								<img src="{{ url_for('static', filename='branding/logo.png', _external=True) }}">
+								<img src="https://d92c68liho4ps.cloudfront.net/static/branding/logo.png">
 							</td>
 						</tr>
 						<tr>
@@ -40,9 +39,9 @@
 							</tr>
 							<tr>
 								<td class="aligncenter content-block">
-									<a href="https://facebook.com/HackTX"><img src="{{url_for('static', filename='img/social/fb.png', _external=True)}}"></a>
-									<a href="https://twitter.com/HackTX"><img src="{{url_for('static', filename='img/social/twitter.png', _external=True)}}"></a>
-									<a href="https://github.com/HackTX"><img src="{{url_for('static', filename='img/social/github.png', _external=True)}}"></a>
+									<a href="https://facebook.com/HackTX"><img src="https://d92c68liho4ps.cloudfront.net/static/img/social/fb.png"></a>
+									<a href="https://twitter.com/HackTX"><img src="https://d92c68liho4ps.cloudfront.net/static/img/social/twitter.png"></a>
+									<a href="https://github.com/HackTX"><img src="https://d92c68liho4ps.cloudfront.net/static/img/social/github.png"></a>
 								</td>
 							</tr>
 						</table>
