--- a/pepper/templates/users/account_setup.html
+++ b/pepper/templates/users/account_setup.html
@@ -1,9 +1,12 @@
-Account setup page
+{% extends 'layouts/base.html' %}
+{% block content %}
 
+<p>Hi {{ user.fname }}! We're super excited for you to join us for {{ config.HACKATHON_NAME }}! my{{ config.HACKATHON_NAME }} is going to be your quickest way to get questions answered before, during, and after the event, but feel free to reach out to your {{ config.HACKATHON_NAME }} representative should you have any questions. Because our attendees also use my{{ config.HACKATHON_NAME }} for managing their own registration, you'll want to make sure you bookmark the <a href="{{ url_for('corp-dash', _external=True) }}" class="decorate">corporate dashboard</a>. Once you choose your password, we can get you set up.</p>
 <form method="POST" action="">
 	<input type="text" name="fname" placeholder="First Name" value="{{ user.fname }}">
 	<input type="text" name="lname" placeholder="Last Name" value="{{ user.lname }}">
 	<input type="password" name="password" placeholder="Password">
-	<input type="password" name="password-check" placeholder="Password check">
+	<input type="password" name="password-check" placeholder="Verify Password">
 	<button type="submit">Submit</button>
 </form>
+{% endblock %}
