--- a/pepper/templates/users/admin/create_user.html
+++ b/pepper/templates/users/admin/create_user.html
@@ -1,7 +1,10 @@
+{% extends 'layouts/base.html' %}
+{% block content %}
 Create a corporate account
 <form method="POST" action="">
-    <input type="text" name="fname" placeholder="First">
+    <input type="text" name="fname" placeholder="First Name">
     <input type="text" name="lname" placeholder="Last">
     <input type="email" name="email" placeholder="Email">
     <button type="submit">Submit</button>
 </form>
+{% endblock %}
