--- a/pepper/templates/users/admin/create_user.html
+++ b/pepper/templates/users/admin/create_user.html
@@ -7,4 +7,11 @@ Create a corporate account
     <input type="email" name="email" placeholder="Email">
     <button type="submit">Submit</button>
 </form>
+<script src="{{ url_for('static', filename='js/corp-create.js') }}"></script>
+	<h3>Unverified Users</h3>
+	{% for user in unverified %}
+		<div class="row">
+			{{ user.fname }} {{ user.lname }} <button class="pull-right unverified-user" id="{{ user.email }}">Resend email</button>
+		</div>
+	{% endfor %}
 {% endblock %}
