--- a/pepper/templates/corporate/results.html
+++ b/pepper/templates/corporate/results.html
@@ -1,3 +1,5 @@
+{% extends 'layouts/base.html' %}
+{% block content %}
 <h1>Results</h1>
 {% for user in users %}
 <p>
@@ -23,3 +25,4 @@ Class Stand
 		<p>{{ class_standing }}</p>
 	{% endfor %}
 {% endif %}
+{% endblock %}
