--- a/pepper/static/css/main.css
+++ b/pepper/static/css/main.css
@@ -135,6 +135,18 @@ table.info {
     min-width: 135px; }
     table.info td.no-border {
       border-bottom: none !important; }
+table.results {
+  width: 100%;
+  margin-bottom: 10px; }
+  table.results col:first-child {
+    background: rgba(255, 255, 255, 0.3); }
+  table.results td {
+    height: 35px;
+    padding-left: 5px;
+    border-bottom: 1pt solid white;
+    min-width: 135px; }
+    table.results td.no-border {
+      border-bottom: none !important; }
 
 .form-info {
   margin-top: 20px; }
