fixed url encoding on check in

--- a/pepper/templates/emails/application_decisions/accept_from_waitlist.html
+++ b/pepper/templates/emails/application_decisions/accept_from_waitlist.html
@@ -7,7 +7,7 @@
 </tr>
 <tr>
 	<td class="content-block">
-		We've got great news! A spot opened up at {{ config.HACKATHON_NAME }} and we'd love to have you join us! Since we're so close to the event, we'll need you to accept your invitation by 11:59 PM CDT on Sunday, October 16, otherwise we'll release your invitation to another student.
+		We've got great news! A spot opened up at {{ config.HACKATHON_NAME }} and we'd love to have you join us! Since we're so close to the event, we'll need you to accept your invitation by 11:59 PM CDT on Friday, October 21.
 	</td>
 </tr>
 <tr>
