added keen fix?

--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -24,38 +24,38 @@
 {#						<td>Class Standing</td>#}
 {#						<td>{{ user.class_standing }}</td>#}
 {#					</tr>#}
-					<tr>
-						<td>Major</td>
-						<td>{{ user.major }}</td>
-					</tr>
+{#					<tr>#}
+{#						<td>Major</td>#}
+{#						<td>{{ user.major }}</td>#}
+{#					</tr>#}
 					<tr>
 						<td>Shirt Size</td>
 						<td>{{ user.shirt_size }}</td>
 					</tr>
-					<tr>
-						<td>Dietary Restrictions</td>
-						<td>{{ user.dietary_restrictions }}</td>
-					</tr>
+{#					<tr>#}
+{#						<td>Dietary Restrictions</td>#}
+{#						<td>{{ user.dietary_restrictions }}</td>#}
+{#					</tr>#}
 					<tr>
 						<td>Birthday</td>
 						<td>{{ user.birthday.strftime('%B %e, %Y') }}</td>
 					</tr>
-					<tr>
-						<td>Gender</td>
-						<td>{{ user.gender }}</td>
-					</tr>
-					<tr>
-						<td>Phone Number</td>
-						<td>{{ user.phone_number }}</td>
-					</tr>
+{#					<tr>#}
+{#						<td>Gender</td>#}
+{#						<td>{{ user.gender }}</td>#}
+{#					</tr>#}
+{#					<tr>#}
+{#						<td>Phone Number</td>#}
+{#						<td>{{ user.phone_number }}</td>#}
+{#					</tr>#}
 					<tr>
 						<td>School</td>
 						<td>{{ user.school_name }}</td>
 					</tr>
-					<tr>
-						<td class="no-border">Special Needs</td>
-						<td class="no-border">{{ user.special_needs }}</td>
-					</tr>
+{#					<tr>#}
+{#						<td class="no-border">Special Needs</td>#}
+{#						<td class="no-border">{{ user.special_needs }}</td>#}
+{#					</tr>#}
 				</table>
 			</div>
 		</div>
