--- a/pepper/static/css/main.css
+++ b/pepper/static/css/main.css
@@ -4,10 +4,30 @@
   color: #CB0922;
   text-shadow: none; }
 
+.results .fa-times-circle {
+  color: #CB0922; }
+@media (min-width: 992px) {
+  .results .action-button {
+    float: right; } }
+@media (max-width: 992px) {
+  .results .action-button {
+    float: left; } }
+
 .sign input[type=text], .sign form input[type=number], form .sign input[type=number], .sign form textarea, form .sign textarea, .sign input[type=email], .sign input[type=tel] {
   width: 95%; }
   .sign input[type=text]:focus, .sign form input[type=number]:focus, form .sign input[type=number]:focus, .sign form textarea:focus, form .sign textarea:focus, .sign input[type=email]:focus, .sign input[type=tel]:focus {
     width: 100%; }
+
+.search input[type=text], .search form input[type=number], form .search input[type=number], .search form textarea, form .search textarea {
+  text-align: left; }
+.search .select {
+  width: 100%; }
+.search .chosen-container {
+  width: 100% !important; }
+.search .row {
+  margin-bottom: 10px; }
+.search button {
+  display: block; }
 
 .confirmation button, .update button {
   display: block; }
@@ -147,6 +167,8 @@ table.results {
     min-width: 135px; }
     table.results td.no-border {
       border-bottom: none !important; }
+  table.results tr:last-child {
+    border-bottom: none !important; }
 
 .form-info {
   margin-top: 20px; }
