--- a/pepper/templates/corporate/search.html
+++ b/pepper/templates/corporate/search.html
@@ -5,28 +5,40 @@
 <script src="{{ url_for('static', filename='js/corp-search.js') }}"></script>
 {% endblock %}
 {% block content %}
-
+<div class="search">
 <h1>Search Attendees</h1>
 	<p>You can search for attendees on the basis of their school, major, or class standing. Don't want to apply a filter? Leave the field blank and we'll return all options from that field.</p>
 <form method="POST" action="{{ url_for('search-results') }}">
-	Schools
-	<select name="schools" multiple class="chosen-select">
+{#	Schools#}
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+	<select name="schools" multiple class="chosen-select" data-placeholder="Schools">
 		{% for school in schools %}
 		<option value="{{ school }}">{{ school }}</option>
 		{% endfor %}
 	</select>
-Majors
-	<select name="majors" multiple class="chosen-select">
+</div>
+</div>
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+	<select name="majors" multiple class="chosen-select" data-placeholder="Majors">
 		{% for major in majors %}
 		<option value="{{ major }}">{{ major }}</option>
 		{% endfor %}
 	</select>
-Class Standings
-	<select name="class_standings" multiple class="chosen-select">
+</div>
+</div>
+<div class="row">
+<div class="col-md-6 col-md-offset-3">
+{#Class Standings#}
+	<select name="class_standings" multiple class="chosen-select" data-placeholder="Class Standings">
 		{% for class_standing in class_standings %}
 		<option value="{{ class_standing }}">{{ class_standing }}</option>
 		{% endfor %}
 	</select>
-<button type="submit">Submit</button>
+</div>
+</div>
+<button type="submit center-block ">Submit</button>
 </form>
+</div>
 {% endblock %}
