--- a/pepper/templates/layouts/head.html
+++ b/pepper/templates/layouts/head.html
@@ -25,10 +25,10 @@
 
 {#Uncomment when working offline#}
 
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/hint.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/toastr.css') }}">
+{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">#}
+{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">#}
+{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/hint.min.css') }}">#}
+{#	<link rel="stylesheet" href="{{ url_for('static', filename='css/toastr.css') }}">#}
 
 {#End uncomment block#}
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
