minor wording fixes for corp

--- a/pepper/templates/users/account_setup.html
+++ b/pepper/templates/users/account_setup.html
@@ -1,12 +1,17 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
-
-<p>Hi {{ user.fname }}! We're super excited for you to join us for {{ config.HACKATHON_NAME }}! my{{ config.HACKATHON_NAME }} is going to be your quickest way to get questions answered before, during, and after the event, but feel free to reach out to your {{ config.HACKATHON_NAME }} representative should you have any questions. Because our attendees also use my{{ config.HACKATHON_NAME }} for managing their own registration, you'll want to make sure you bookmark the <a href="{{ url_for('corp-dash', _external=True) }}" class="decorate">corporate dashboard</a>. Once you choose your password, we can get you set up.</p>
+	<div style="margin-top: -50px;">
+	<img src="{{ url_for('static', filename='branding/logo.png') }}"
+													  height="60" class="center-block">
+<div class="large-text" style="margin-top: 20px;">
+<p>Hi {{ user.fname }}! Thanks for joining us for {{ config.HACKATHON_NAME }}! my{{ config.HACKATHON_NAME }} is built to be an easy way for you to filter through all our attendee resumes. If you have any questions, feel free to reach out to your {{ config.HACKATHON_NAME }} representative to best help you. Because our attendees also use my{{ config.HACKATHON_NAME }} for managing their own registration, you'll want to make sure you bookmark the <a href="{{ url_for('corp-dash', _external=True) }}" class="decorate">corporate dashboard</a> for future usage. Once you choose your password, we can get you set up.</p>
+	</div>
 <form method="POST" action="">
 	<input type="text" name="fname" placeholder="First Name" value="{{ user.fname }}">
 	<input type="text" name="lname" placeholder="Last Name" value="{{ user.lname }}">
 	<input type="password" name="password" placeholder="Password">
 	<input type="password" name="password-check" placeholder="Verify Password">
-	<button type="submit">Submit</button>
+	<button type="submit" class="center-block">Submit</button>
 </form>
+	</div>
 {% endblock %}
