fixed all resumes link

--- a/pepper/templates/layouts/base.html
+++ b/pepper/templates/layouts/base.html
@@ -15,7 +15,7 @@
 		<nav class="header">
 			<div class="container">
 				<div class="col-md-3 col-md-offset-5 col-xs-3">
-					<a href="https://my.hacktx.com"><img src="{{ url_for('static', filename='branding/logo.png') }}"
+					<a href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='branding/logo.png') }}"
 													  height="60"></a></div>
 				<a href="{{ url_for('logout') }}" class="pull-right">Logout</a>
 			</div>
