--- a/pepper/templates/emails/corporate_welcome.html
+++ b/pepper/templates/emails/corporate_welcome.html
@@ -7,12 +7,22 @@
 	</tr>
 	<tr>
 		<td class="content-block">
-			Thanks for joining us for {{ config.HACKATHON_NAME }}! You now have access to my{{ config.HACKATHON_NAME }}, a secure portal to download resumes and search for particular attendees information.
+			Thanks for joining us for {{ config.HACKATHON_NAME }} 2016! You now have access to my{{ config.HACKATHON_NAME }}, a secure portal to download resumes and filter by major, school, or class standing.
 		</td>
 	</tr>
 	<tr>
 		<td class="content-block">
-			To join, please click <a href="{{ setup_url }}">here</a>
+			Because we have so many resumes (over 1,800 of them), we will only keep this portal open until November 18, 2016. Please make sure to download and search for any resumes before then!
+		</td>
+	</tr>
+	<tr>
+		<td class="content-block">
+			To accept your invitation, please click <a href="{{ setup_url }}">here</a> to setup your account. Privacy and security are extremely important to us at Freetail Hackers, so please <strong>DO NOT</strong> forward this email or share your login information. Should you need another person to access the portal, we'd be happy to create an account for them, just send their first and last name as well as email over to your {{ config.HACKATHON_NAME }} representative.
+		</td>
+	</tr>
+	<tr>
+		<td class="content-block">
+			❤️ Freetail Hackers
 		</td>
 	</tr>
 {% endblock %}
