fix the freetail bottom part

--- a/pepper/templates/emails/corporate_welcome.html
+++ b/pepper/templates/emails/corporate_welcome.html
@@ -26,3 +26,6 @@
 		</td>
 	</tr>
 {% endblock %}
+{% block footer %}
+You are receiving this email because a Freetail Hackers representative was told that you would like access to our corporate portal. If you don't know why this happened, please reach out to <a href="mailto:partnerships@freetailhackers.com">partnerships@freetailhackers.com</a>.
+{% endblock %}
