--- a/pepper/templates/users/admin/accept_users.html
+++ b/pepper/templates/users/admin/accept_users.html
@@ -4,26 +4,31 @@
 	<form action="{{ url_for('batch-modify') }}" method="POST">
 		<input type="number" name="num_to_accept" placeholder="Number to accept">
 		<div class="select">
-		  <select name="type">
-			  <option value="fifo">FIFO</option>
-			  <option value="random">Random</option>
-		  </select>
-		  <div class="select__arrow"></div>
+			<select name="type">
+				<option value="fifo">FIFO</option>
+				<option value="random">Random</option>
+			</select>
+			<div class="select__arrow"></div>
 		</div>
-		<button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></button>
+		<label class="control control--checkbox">Include waitlisted
+			<input type="checkbox" name="include_waitlist" value="true"/>
+			<div class="control__indicator"></div>
+		</label>
+		<button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+		</button>
 	</form>
 	<br>
-	<p>    List of pending users</p>
+	<p> List of pending users</p>
 
-    <ul>
-    </ul>
-    <ul>
-    {% for user in users %}
-		<div class="row">
-		<div class="col-md-6">
-        {{ user.fname }} {{ user.lname }}
-		</div>
-		</div>
-    {% endfor %}
-    </ul>
+	<ul>
+	</ul>
+	<ul>
+		{% for user in users %}
+			<div class="row">
+				<div class="col-md-6">
+					{{ user.fname }} {{ user.lname }}
+				</div>
+			</div>
+		{% endfor %}
+	</ul>
 {% endblock content %}
