Add admin dashboard and navbar

--- a/pepper/templates/users/admin/create_user.html
+++ b/pepper/templates/users/admin/create_user.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/admin_base.html' %}
 {% block content %}
 Create a corporate account
 <form method="POST" action="">
