--- a/pepper/templates/users/admin/internal_login.html
+++ b/pepper/templates/users/admin/internal_login.html
@@ -1,4 +1,7 @@
+{% extends 'layouts/admin_base.html' %}
+{% block content %}
 <form method="POST" action="">
 	<input type="text" name="id">
 	<button type="submit">Submit</button>
 </form>
+{% endblock %}
