--- a/pepper/templates/users/admin/set_mlh_id.html
+++ b/pepper/templates/users/admin/set_mlh_id.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/admin_base.html' %}
 {% block content %}
 	<h1>Set MLH ID</h1>
 	<form action="{{ url_for('set-mlh-id') }}" method="POST">
