--- a/pepper/templates/users/dashboard/admin_dashboard.html
+++ b/pepper/templates/users/dashboard/admin_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/admin_base.html' %}
 {% block content %}
     HELLO ADMIN!
     Here are some actions you can do:
