--- a/pepper/templates/users/admin/accept_users.html
+++ b/pepper/templates/users/admin/accept_users.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/admin_base.html' %}
 {% block content %}
 	<h1>Accept Users</h1>
 	<form action="{{ url_for('batch-modify') }}" method="POST">
