--- a/pepper/templates/users/admin/send_email.html
+++ b/pepper/templates/users/admin/send_email.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/admin_base.html' %}
 {% block content %}
 	<h1>Send Email</h1>
 	<form action="{{ url_for('send-email') }}" method="POST">
