--- a/pepper/templates/users/admin/volunteer_list.html
+++ b/pepper/templates/users/admin/volunteer_list.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/admin_base.html' %}
 {% block content %}
 	<h1>Add Volunteers</h1>
 	<form action="{{ url_for('add-volunteer') }}" method="POST">
