Login revamp WIP

--- a/pepper/static/css/main.css
+++ b/pepper/static/css/main.css
@@ -378,3 +378,8 @@ body {
   height: 85px; }
   .footer img {
     padding-bottom: 10px; }
+
+.login-logo {
+  margin: 20px; }
+
+/*# sourceMappingURL=main.css.map */
