remove hardcoded urls

--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -39,9 +39,9 @@
 							</tr>
 							<tr>
 								<td class="aligncenter content-block">
-									<a href="https://facebook.com/HackTX"><img src="https://d92c68liho4ps.cloudfront.net/static/img/social/fb.png"></a>
-									<a href="https://twitter.com/HackTX"><img src="https://d92c68liho4ps.cloudfront.net/static/img/social/twitter.png"></a>
-									<a href="https://github.com/HackTX"><img src="https://d92c68liho4ps.cloudfront.net/static/img/social/github.png"></a>
+									<a href="https://facebook.com/HackTX"><img src="{{url_for('static', filename='img/social/fb.png', _external=True)}}"></a>
+									<a href="https://twitter.com/HackTX"><img src="{{url_for('static', filename='img/social/twitter.png', _external=True)}}"></a>
+									<a href="https://github.com/HackTX"><img src="{{url_for('static', filename='img/social/github.png', _external=True)}}"></a>
 								</td>
 							</tr>
 						</table>
