Team Management Board 1.0

--- a/pepper/templates/teams/manage_team.html
+++ b/pepper/templates/teams/manage_team.html
@@ -11,14 +11,14 @@
 	<h2>Join A Team</h2>
 	<h3>Ask your friend for their team name</h3>
 	<p>
-	<form method="POST" action="join-team" id="jteam">
+	<form method="POST" action="team" id="join">
 		<input type="text" placeholder="Join Team Name" name="join_tname">
-		<button type="submit">Join Team</button>
+		<button type="submit" name="button" value="join">Join Team</button>
 	</form>
 	<h2>Create A Team</h2>
-	<form method="POST" action="create-team" id="cteam">
+	<form method="POST" action="team" id="create">
 		<input type="text" placeholder="Create Team Name" name="create_tname">
-		<button type="submit">Create Team</button>
+		<button type="submit" name="button" value="create">Create Team</button>
 	</form>
 </div>
 
