--- a/pepper/templates/teams/team.html
+++ b/pepper/templates/teams/team.html
@@ -5,18 +5,20 @@
 <script src="{{ url_for('static', filename='js/validate.js') }}"></script>
 
 <!-- Show information for people who already have a team -->
-<h2>{{ team.tname }}</h2>
+<h2>Team</h2>
+<p>{{ team.tname }}</p>
+<h2>Teammates</h2>
 {% for user in team.users %}
-<h2>{{ user.name }}</h2>
+<p>{{ user.fname }} {{ user.lname }}</p>
 {% endfor %}
 
 <!-- Contains rename and leave team buttons -->
-<form method="POST" action="rename-team" id="rname">
+<form method="POST" action="team" id="rename">
 	<input type="text" placeholder="Rename team" name="rename_tname">
-	<button type="submit">Rename</button>
+	<button type="submit" name="button" value="rename">Rename</button>
 </form>
 
-<form method="POST" action="leave-team" id="lname">
-	<button type="submit">Leave Team</button>
+<form method="POST" action="team" id="leave">
+	<button type="submit" name="button" value="leave">Leave Team</button>
 	</form>
 {% endblock %}
